adding some features

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,8 +16,17 @@
   <div class="main-container">
     {{>header}}
     <img class="portrait" src="/media/imgs/avatar.png" alt="">
+    <p>This app was created using node js and Express, it also uses fetch api to get weather data from the server</p>
+    <p>In this app these modules and apis where used: </p>
+    <ul>
+      <li>Weatherstack api</li>
+      <li>Mapbox api</li>
+      <li>Fetch Api</li>
+      <li>Postman-request module</li>
+      <li>Express module</li>
+      <li>Handlebars view engine</li>
+    </ul>
   </div>
-
   {{>footer}}
 </body>
 
