--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,7 @@
       </form>
       <p id="message-1"></p>
       <p id="message-2"></p>
+      <img id="icon" src="" alt="">
   </div>
   {{>footer}}
   <script src="/js/app.js"></script>
